# ghidra-auth

./: .env.example  Cargo.toml  README.md  Rocket.toml
src/: ghidra.rs  lib.rs  main.rs
static/: index.html  style.css
