[package]
name = "ghidra-web-ui"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"
license = "Zlib"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
