[package]
name = "ghidra-web-ui"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"
license = "Zlib"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
dotenv = "0.15"
tokio = { version = "0.2", features = ["process", "sync"] }
