[package]
name = "ghidra-auth"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"
license = "Zlib"

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
bincode = "1.3.1"
smol_str = { version = "0.1.17", features = ["serde"] }
scrypt = "0.5.0"
async-fs = "1.5.0"
async-lock = "2.3.0"
blocking = "1.0.2"

[dev-dependencies]
smol = "1.2.4"
